# Automation-Auditor

./: .env.example  .gitignore  Dockerfile  LANGSMITH_TRACE.md  README.md  pyproject.toml  requirements.txt  run_audit.sh
audit/report_bypeer_received/: audit_report_20260228_225334.md
audit/report_onpeer_generated/: audit_20260228_2054.md
audit/report_onself_generated/: audit_20260225_0853.md  audit_20260225_0915.md  audit_20260225_1006.md  audit_20260225_1124.md  audit_20260226_0937.md  audit_20260226_0949.md  audit_20260227_1423.md  audit_20260227_1430.md  audit_20260227_1448.md  audit_20260228_1345.md  audit_20260228_1348.md  audit_20260228_1350.md  audit_20260228_1354.md  audit_20260228_1535.md  audit_20260228_1808.md  audit_20260228_1855.md  audit_20260228_1922.md  audit_20260228_2026.md
rubric/: week1_rubric.json  week2_rubric.json  week2_self_rubric.json
src/: __init__.py  graph.py  import_peer_report.py  run_audit.py  state.py
src/nodes/: __init__.py  detectives.py  judges.py  justice.py  protocols.py
src/tools/: __init__.py  ast_parser.py  doc_tools.py  git_tools.py  pdf_tools.py  repo_tools.py  vision.py
